<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">SeaPal</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="accept">Accept</string>
	<string name="decline">Decline</string>
	<string name="eula_title">License Agreement</string>
	<string name="head">Head Image</string>
	<string name="menu">Menu Image</string>
	<string name="positionText">Position Text</string>
	<string name="menuButton">Menu Button</string>
	<string name="menuButtonText">Menu</string>
	<string name="toolsButtonText">Tools</string>
	<string name="googleMapMenuItem">Google map</string>
	<string name="openSeaMapMenuItem">Open sea map</string>
	<string name="offlineMapsPopupMenuItem">Offline maps</string>
	<string name="selectRoutePopupMenuItem">Select Route</string>
	<string name="selectTrackPopupMenuItem">Select Track</string>
	<string name="selectMarkPopupMenuItem">Select Mark</string>
	<string name="selectBoatPopupMenuItem">Select Boat</string>
	<string name="searchItem">Search for location</string>
	<string name="addMark">Add mark on map</string>
	<string name="addRoute">Add route on map</string>
	<string name="distance">Distance</string>
	<string name="gotoCurentPosition">Goto current location</string>
	<string name="takePicture">Take picture</string>
	<string name="personOverBoard">Person over board</string>
	<string name="discardTarget">Discard target</string>
	<string name="shopText">AddOn</string>
	<string name="logbookText">Logbook</string>
	<string name="dashboardText">Dashboard</string>
	<string name="markText">Marks</string>
	<string name="routeText">Route</string>
	<string name="poiText">POI</string>
	<string name="weatherText">Weather</string>
	<string name="logbookBoatname">Boatname</string>
	<string name="logbookType">Type</string>
	<string name="productionYear">Production Year</string>
	<string name="idNumber">Corporate ID number</string>
	<string name="draftsman">Draftsman</string>
	<string name="engine">Engine</string>
	<string name="sailEmblem">Sail Emblem</string>
	<string name="length">Length</string>
	<string name="tankSize">Tank Size</string>
	<string name="homePort">Home Port</string>
	<string name="width">Width</string>
	<string name="waterTankSize">Watertank Size</string>
	<string name="yachtClub">Yachtclub</string>
	<string name="flotationDepth">Flotation Depth</string>
	<string name="sewageWaterTankSize">Sewage Watertank Size</string>
	<string name="owner">Owner</string>
	<string name="mastHeight">Mast Height</string>
	<string name="mainSailSize">Main Sail Size</string>
	<string name="insurance">Insurance</string>
	<string name="displacement">Displacement</string>
	<string name="genoaSize">Genoa Size</string>
	<string name="callSign">Call Sign</string>
	<string name="rigKind">Rig-Kind</string>
	<string name="spiSize">Spi Size</string>
	<string name="map">Map</string>
	<string name="add">Add</string>
	<string name="latest">Latest</string>
	<string name="prev">Previus</string>
	<string name="next">Next</string>
	<string name="notImplemented">This Feature is not Implemented Yet</string>
	<string name="setMark">Set Mark</string>
	<string name="setRoute">Set Route</string>
	<string name="calcDistance">Calculate Distance</string>
	<string name="aim">Set Destination</string>
	<string name="delete">Delete</string>
	<string name="markDialogNameHint">Name</string>
	<string name="markDialogLabelHint">Label</string>
	<string name="addMarkDialog">Add Mark</string>
	<string name="negative">Cancel</string>
	<string name="addEditMark">Add/Edit Mark</string>
	<string name="editMarkName">Name</string>
	<string name="editMarkLabel">Label</string>
	<string name="lat">Lat</string>
	<string name="lon">Lon</string>
	<string name="bearing">Bearing</string>
	<string name="at">at</string>
	<string-array name="filterOptions">
	    <item>by Name</item>
	    <item>by Distance</item>
	    <item>by Label</item>
	</string-array>
	<string name="byCoordinate">By Coordinate</string>
	<string name="byCrossBearing">By Cross Bearing</string>
	<string name="byDistance">By Distance and Bearing</string>
	<string name="markName">Mark Name</string>
	<string name="markCreated">Created At</string>
	<string name="markLabel">Labels</string>
	<string name="mark">Mark</string>
	<string name="rename">Rename</string>
	<string name="move">Move</string>
	<string name="minute">min</string>
	<string-array name="crossBearingOptions">
	    <item>Current Position</item>
	    <item>1 min</item>
	    <item>2 min</item>
	    <item>3 min</item>
	    <item>4 min</item>
	    <item>5 min</item>
	    <item>10 min</item>
	    <item>30 min</item>
	    <item>60 min</item>
	</string-array>
	<string name="finish">Finish</string>
	<string name="startline">Startline Gate</string>
	<string name="endline">Finishline Gate</string>
	<string name="startCycle">StartCycle</string>
	<string name="endCycle">End Cycle</string>
	<string name="routeName">Route Name:</string>
	<string name="regatta">Regatta</string>
	<string name="addGate">Add Gate</string>
	<string name="addCycle">Add Cycle</string>
	<string name="startRoute">Start Route</string>
	<string name="up">Up</string>
	<string name="down">Down</string>
	<string name="edit">Edit</string>
	<string name="set">Set</string>
	<string name="route">Route</string>
	<string name="addNewMarkOnMap">Add new Mark on Map</string>
	<string name="addNewMarkByData">Add new Mark by Data</string>
	<string name="id">ID</string>
	<string name="undo">Undo</string>
	<string name="save">Save</string>
	<string name="addToRoute">Add the selected Position to Route?</string>
	<string name="useCurLoc">Use current Location</string>
	<string-array name="maneuver">
	    <item>Tack</item>
	    <item>Jibe</item>
	    <item>Lay to</item>
	    <item>Set Sails</item>
	    <item>Change Sails</item>
	    <item>Sails down</item>
	    <item>Reff</item>
	    <item>Anker up</item>
	    <item>Anker down</item>
	    <item>Entine</item>
	    <item>started Engine</item>
	</string-array>
	<string-array name="headSail">
	    <item>Genua 1</item>
	    <item>Genua 2</item>
	    <item>Genua 3</item>
	    <item>Fock</item>
	    <item>Storm Fock</item>
	    <item>Blister</item>
	    <item>Spinaker</item>
	</string-array>
	<string-array name="mainSail">
	    <item>Down</item>
	    <item>Full</item>
	    <item>Reff 1</item>
	    <item>Reff 2</item>
	    <item>Reff 3</item>
	</string-array>
	<string name="tripTitle">Trip Title</string>
	<string name="skipper">Skipper</string>
	<string name="start">Start</string>
	<string name="From">From</string>
	<string name="end">End</string>
	<string name="to">To</string>
	<string name="duration">Duration</string>
	<string name="tanked">Tanked</string>
	<string name="time">Time</string>
	<string name="Notes"></string>
	<string name="cog">CoG</string>
	<string name="sog">SoG</string>
	<string name="tripsBetween">Trips between</string>
	<string name="and">and</string>
	<string name="crew">Crew</string>
	<string name="startLogging">Start Logging</string>
	<string name="newTrip">New Trip</string>
	<string-array name="mainMenu">
	    <item>Google Maps</item>
	    <item>Open Sea Map</item>
	    <item>Add Mark</item>
	    <item>Add Route</item>
	    <item>Distance</item>
	    <item>Center Map</item>
	    <item>Set Aim</item>
	    <item>Discard Target</item>
	</string-array>
	    <string name="mainMenuTitle">Menu</string>
	    <string name="toolsmenu">Tools</string>
</resources>