<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <TextView 
        android:id="@+id/time"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/time"/>
    
    <TextView 
        android:id="@+id/lat"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/lat"/>
    
    <TextView 
        android:id="@+id/lon"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/lon"/>
    
    <TextView 
        android:id="@+id/cog"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/cog"/>
    
    <TextView 
        android:id="@+id/sog"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/sog"/>
    
    <TextView 
        android:id="@+id/notes"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/Notes"/>
    
</LinearLayout>