<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <EditText 
        android:id="@+id/title"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:hint="@string/tripTitle"
    	android:inputType="text"/>
    
    <EditText 
        android:id="@+id/skipper"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:hint="@string/skipper"
    	android:inputType="text"/>
    
    <EditText 
        android:id="@+id/from"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:hint="@string/From"
    	android:inputType="text"/>
    
    <EditText 
        android:id="@+id/to"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:hint="@string/to"
    	android:inputType="text"/>

</LinearLayout>