<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >	    
	    <TextView
	        android:id="@+id/name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15dp"
	        android:paddingTop="4dp"
	        android:text="@string/markName"
	        android:layout_marginLeft="50dp" />
	    
	    <TextView
	        android:id="@+id/createdAt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15dp"
	        android:paddingTop="4dp"
	        android:text="@string/markCreated"
	        android:layout_marginLeft="300dp" />
	    
	    <TextView
	        android:id="@+id/lati"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15dp"
	        android:paddingTop="4dp"
	        android:text="@string/lat"
	        android:layout_marginLeft="550dp" />
	    
	    <TextView
	        android:id="@+id/longi"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15dp"
	        android:paddingTop="4dp"
	        android:text="@string/lon"
	        android:layout_marginLeft="800dp" />
	    
	    <TextView
	        android:id="@+id/label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15dp"
	        android:paddingTop="4dp"
	        android:text="@string/markLabel"
	        android:layout_marginLeft="1050dp" />
	    
</RelativeLayout>