<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/editMarkDialogName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/markName"/>
    
    <EditText 
        android:id="@+id/editMarkDialogLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lat"/>
    
    <EditText 
        android:id="@+id/editMarkDialogLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lon"/>

</LinearLayout>