<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_weight="2">
        
        <GridLayout 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:columnCount="6"
    		android:rowCount="4">
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/tripTitle"
    			android:layout_column="0"
    			android:layout_row="0"/>
            
            <EditText 
                android:id="@+id/editTripTitle"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:hint="@string/tripTitle"
    			android:layout_column="1"
    			android:layout_row="0"
    			android:layout_columnSpan="5"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/From"
    			android:layout_column="0"
    			android:layout_row="1"/>
            
            <EditText 
                android:id="@+id/editTripFrom"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:hint="@string/From"
    			android:layout_column="1"
    			android:layout_row="1"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/crew"
    			android:layout_column="2"
    			android:layout_row="1"/>
            
            <EditText
            	android:id="@+id/editTripCrew"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:inputType="textMultiLine"
            	android:layout_column="3"
    			android:layout_row="1"
    			android:layout_rowSpan="3" />
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/start"
    			android:layout_column="4"
    			android:layout_row="1"/>
            
            <DatePicker 
                android:id="@+id/dateStart"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_column="5"
    			android:layout_row="1"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/to"
    			android:layout_column="0"
    			android:layout_row="2"/>
            
            <EditText 
                android:id="@+id/editTripTo"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:hint="@string/to"
    			android:layout_column="1"
    			android:layout_row="2"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/end"
    			android:layout_column="4"
    			android:layout_row="2"/>
            
            <DatePicker 
                android:id="@+id/dateEnd"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_column="5"
    			android:layout_row="2"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/skipper"
    			android:layout_column="0"
    			android:layout_row="3"/>
            
            <EditText 
                android:id="@+id/editTripSkipper"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:hint="@string/skipper"
    			android:layout_column="1"
    			android:layout_row="3"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/duration"
    			android:layout_column="4"
    			android:layout_row="3"/>
            
            <DatePicker 
                android:id="@+id/dateDuration"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_column="5"
    			android:layout_row="3"/>
            
        </GridLayout>
        
        <GridLayout 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:columnCount="2"
    		android:rowCount="3">
            
            <Button 
                android:id="@+id/startLogging"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/startLogging"
    			android:layout_column="0"
    			android:layout_row="0"
    			android:layout_columnSpan="2"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/engine"
    			android:layout_column="0"
    			android:layout_row="1"/>
            
            <EditText 
                android:id="@+id/editTripEngine"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:hint="@string/engine"
    			android:layout_column="1"
    			android:layout_row="1"/>
            
            <CheckBox 
                android:id="@+id/checkTankFilled"
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_column="0"
    			android:layout_row="2"/>
            
            <TextView 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/tanked"
    			android:layout_column="1"
    			android:layout_row="2"/>
            
        </GridLayout>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_weight="2">
        
        <EditText
            	android:id="@+id/editTripNotes"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:inputType="textMultiLine" />
        
        <com.google.android.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/myGMap"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:apiKey="0_QXbRf-wOv0KEslY64I2qHS89jYR6-dNRmN3Hw"
            android:clickable="true"
            android:enabled="true" />
        
        <Gallery
        	android:id="@+id/galleryTrip"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>
        
    </LinearLayout>
    
    <ListView
        android:id="@+id/listTripPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1" />

</LinearLayout>