<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/routeTop"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:columnCount="3"
    	android:rowCount="2">
        
        <TextView 
            android:id="@+id/routeNameLabel"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="fill_horizontal"
    		android:text="@string/routeName"
    		android:textAppearance="?android:attr/textAppearanceLarge"
    		android:layout_column="0"
    		android:layout_row="0"/>
        
        <EditText 
            android:id="@+id/routeNameEdit"
            android:layout_width="840dp"
    		android:layout_height="wrap_content"
    		android:layout_gravity="fill_horizontal"
    		android:layout_column="1"
    		android:layout_row="0"
    		android:inputType="text"/>
        
        
        <Button 
            android:id="@+id/startRouteButton"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/startRoute"
        	android:gravity="center_vertical"
        	android:onClick=""
        	android:layout_column="2"
    		android:layout_row="0"
    		android:layout_rowSpan="2"
    		android:layout_gravity="fill_vertical|right"/>
        
        <Spinner 
            android:id="@+id/routesSpinner"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_column="0"
    		android:layout_row="1"/>
        
        <Spinner 
            android:id="@+id/addMarkSpinner"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_column="1"
    		android:layout_row="1"/>
              
    </GridLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <RelativeLayout 
            android:id="@+id/routeItemList"
            android:layout_width="1200dp"
    		android:layout_height="wrap_content"/>
        
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >
            
            <Button 
            	android:id="@+id/upButton"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/up"
        		android:gravity="center_vertical"
        		android:onClick="" />
            
            <Button 
            	android:id="@+id/editButton"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/edit"
        		android:gravity="center_vertical"
        		android:onClick="" />
            
            <Button 
            	android:id="@+id/setButton"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/set"
        		android:gravity="center_vertical"
        		android:onClick="" />
            
            <Button 
            	android:id="@+id/downButton"
            	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/down"
        		android:gravity="center_vertical"
        		android:onClick="" />
            
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>